--- a/abbrevs/src/main/webapp/templates-hidden/default.html
+++ b/abbrevs/src/main/webapp/templates-hidden/default.html
@@ -81,22 +81,22 @@
   </head>
   <body>
     <div class="container">
-      <hr class="space" >
+      <hr class="space"/>
       <div class="column span-24 last" style="text-align: left">
-        <h1>Теория динамических информационных систем<img alt="" id="ajax-loader" style="display:none; margin-bottom: 0px; margin-left: 5px" src="/images/ajax-loader.gif"></h1>
+        <h1>Теория динамических информационных систем<img alt="" id="ajax-loader" style="display:none; margin-bottom: 0px; margin-left: 5px" src="/images/ajax-loader.gif"/></h1>
       </div>
 
-      <hr>
+      <hr/>
 
       <div class="column span-24 last">
         <div id="content">The main content will get bound here</div>
       </div>
 
-      <hr />
+      <hr/>
     <div class="column span-16">
       <h4 class="alt">
         Абревиатуры загружены с <a href="http://newasp.omskreg.ru/tdis/short1.htm">сайта ТДИС</a>
-      <h4>
+      </h4>
     </div>
       <div class="column span-8 last" style="text-align: right">
         <h4 class="alt">
