--- a/abbrevs/src/main/webapp/index.html
+++ b/abbrevs/src/main/webapp/index.html
@@ -8,27 +8,14 @@
       <div class="column span-18">
           <h2>Аббревиатуры</h2>
       </div>
-      <div class="column span-6 last">
-        <input id="quickSearch" type="text"/>
+      <div class="column span-6 last lift:Abbrevs.search">
+        <input class="input" type="text"/>
         <a id="clearSearch" href="javascript:void()">очистить</a>
-        <script type="text/javascript">
-            $("#quickSearch").change(function () {
-                //console.log($(this).val());
-                var searchString = $(this).val();
-                $(".abbrev").each(function () {
-                  var it = $(this);
-                  if (it.text().toLowerCase().indexOf(searchString) != -1 ||
-                      it.attr("abbr").toLowerCase().indexOf(searchString) != -1) {
-                      it.show();
-                  } else {
-                      it.hide();
-                  }
-                });
-            });
+        <script type="text/javascript">//<![CDATA[
             $("#clearSearch").click(function () {
-                $("#quickSearch").val("").change();
+                $("#quickSearch").val("").blur();
             });
-        </script>
+        //]]></script>
       </div>
 
       <div class="column span-24 last">
@@ -37,9 +24,26 @@
           </p>
       </div>
       <div class="column span-24 last">
-        <div class="lift:Abbrevs.table"/>
+        <span class="lift:embed?what=_abbrevs"/>
       </div>
-    </div>
+      <div id="abbrevMeaning"></div>
+      <script type="text/javascript">//<![CDATA[
+         $("#abbrevMeaning").css({
+           position: "absolute"
+         }).hide();
+
+         $(".abbrev").live("mousemove", function (e) {
+           // console.log($(this).attr("abbr"), e.pageX, e.pageY);
+           $("#abbrevMeaning").text($(this).attr("abbr")).css({
+             left: e.pageX + 10 + "px",
+             top: e.pageY + 10 + "px"
+           }).show();
+         });
+         $(".abbrev").live("mouseout", function () {
+           $("#abbrevMeaning").hide();
+         });
+       //]]></script>
+
   </body>
 </html>
 
