Switched to use html abbr

--- a/abbrevs/src/main/webapp/templates-hidden/default.html
+++ b/abbrevs/src/main/webapp/templates-hidden/default.html
@@ -8,8 +8,7 @@
     <style class="lift:CSS.fancyType"></style>
     <script id="jquery" src="/classpath/jquery.js" type="text/javascript"></script>
     <script id="json" src="/classpath/json.js" type="text/javascript"></script>
-   <!--<link href="abbrevs.css" type="text/css" media="screen" rel="stylesheet"></link>-->
-    <style type="text/css">
+   <style type="text/css">
 /* <![CDATA[ */
 .edit_error_class {
   display: block;
@@ -49,32 +48,20 @@
 	background-color: #eee;
 }
 
-.abbrevs {
-}
-
-.abbrev {
+.abbrevs abbr {
     display: inline-block;
     background: #EEE;
     width: 65px;
-    cursor: pointer;
     padding: 2px 5px 5px;
     margin: 0px 5px 5px 0px;
     font-size: 1.3em;
+    border: 0px;
 }
 
-
-.abbrev:hover {
+.abbrevs abbr:hover {
     color: #009;
     background: #DDD;
 }
-
-
-#abbrevMeaning {
-    background: #EEE;
-    padding: 10px;
-    border: 1px solid #666;
-}
-
 
   /* ]]> */
   </style>
