--- a/abbrevs/src/main/webapp/index.html
+++ b/abbrevs/src/main/webapp/index.html
@@ -20,30 +20,12 @@
 
       <div class="column span-24 last">
           <p>
-            Наведите на аббревиатуру, чтобы узнать значение
+            Наведите на аббревиатуру и немного подождите, чтобы узнать значение
           </p>
       </div>
       <div class="column span-24 last">
         <span class="lift:embed?what=_abbrevs"/>
       </div>
-      <div id="abbrevMeaning"></div>
-      <script type="text/javascript">//<![CDATA[
-         $("#abbrevMeaning").css({
-           position: "absolute"
-         }).hide();
-
-         $(".abbrev").live("mousemove", function (e) {
-           // console.log($(this).attr("abbr"), e.pageX, e.pageY);
-           $("#abbrevMeaning").text($(this).attr("abbr")).css({
-             left: e.pageX + 10 + "px",
-             top: e.pageY + 10 + "px"
-           }).show();
-         });
-         $(".abbrev").live("mouseout", function () {
-           $("#abbrevMeaning").hide();
-         });
-       //]]></script>
-
   </body>
 </html>
 
