--- a/abbrevs/src/main/webapp/templates-hidden/_abbrevs.html
+++ b/abbrevs/src/main/webapp/templates-hidden/_abbrevs.html
@@ -1,3 +1,3 @@
 <div class="abbrevs lift:Abbrevs.table">
-    <div class="abbrev" abbr="Abbreviature">ABBR</div>
+    <abbr title="Some abbr explanation">ABBR</div>
 </div>
