--- a/abbrevs/src/main/webapp/templates-hidden/default.html
+++ b/abbrevs/src/main/webapp/templates-hidden/default.html
@@ -1,9 +1,9 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:lift="http://liftweb.net/">
+<html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-    <title>ТДИС - Аббревиатуры</title>
+    <title class="lift:Menu.title">ТДИС :: </title>
     <style class="lift:CSS.blueprint"></style>
     <style class="lift:CSS.fancyType"></style>
     <script id="jquery" src="/classpath/jquery.js" type="text/javascript"></script>
@@ -15,36 +15,40 @@
   color: red;
 }
 
-.sidebar ul {
+.menu {
+}
+
+.menu ul {
 	margin:0;
-	padding:0;
+    padding:0 0 0 0;
 	border-bottom:1px solid #ccc;
 }
 	 
 
-.sidebar ul li {
+.menu ul li {
 	margin:0;
 	padding:0;
 	list-style:none;
 	border:1px solid #ccc;
 	border-bottom:none;
+    display: inline-block;
+    margin-right: 5px;
 }
 
-.sidebar ul li a {
+.menu ul li a {
 	display:block;
-	padding:3px;
-	text-indent:30px;
+	padding:3px 30px;
 	text-decoration:none;
 }
 
-.sidebar ul li span {
+.menu ul li span {
 	display:block;
 	padding:3px;
-	text-indent:30px;
+    padding:3px 30px;
 	text-decoration:none;
 }
 
-.sidebar ul li a:hover {
+.menu ul li a:hover {
 	background-color: #eee;
 }
 
@@ -63,6 +67,14 @@
     background: #DDD;
 }
 
+.filter .text {
+    width: 100%;
+}
+
+#filterResultsContainer {
+    padding-bottom: 10px;
+}
+
   /* ]]> */
   </style>
   </head>
@@ -73,7 +85,11 @@
         <h1>Теория динамических информационных систем<img alt="" id="ajax-loader" style="display:none; margin-bottom: 0px; margin-left: 5px" src="/images/ajax-loader.gif"/></h1>
       </div>
 
-      <hr/>
+      <div class="menu column span-24 last">
+        <div class="lift:Menu.builder"></div>
+      </div>
+
+      <hr class="space"/>
 
       <div class="column span-24 last">
         <div id="content">The main content will get bound here</div>
