Text tool improoved

--- a/abbrevs/src/main/webapp/index.html
+++ b/abbrevs/src/main/webapp/index.html
@@ -26,6 +26,7 @@
       <div class="column span-24 last">
         <span class="lift:embed?what=_abbrevs"/>
       </div>
+      <div class="lift:embed?what=_abbrmeaning"/>
   </body>
 </html>
 
