--- a/abbrevs/src/main/webapp/templates-hidden/default.html
+++ b/abbrevs/src/main/webapp/templates-hidden/default.html
@@ -44,7 +44,7 @@
 .menu ul li span {
 	display:block;
 	padding:3px;
-    padding:3px 30px;
+  padding:3px 30px;
 	text-decoration:none;
 }
 
@@ -53,26 +53,32 @@
 }
 
 .abbrevs abbr {
-    display: inline-block;
-    background: #EEE;
-    width: 65px;
-    padding: 2px 5px 5px;
-    margin: 0px 5px 5px 0px;
-    font-size: 1.3em;
-    border: 0px;
+  display: inline-block;
+  background: #EEE;
+  width: 65px;
+  padding: 2px 5px 5px;
+  margin: 0px 5px 5px 0px;
+  font-size: 1.3em;
+  border: 0px;
 }
 
 .abbrevs abbr:hover {
-    color: #009;
-    background: #DDD;
+  color: #009;
+  background: #DDD;
+}
+
+#abbrevMeaning {
+  background: #EEE;
+  padding: 10px;
+  border: 1px solid #666;
 }
 
 .filter .text {
-    width: 100%;
+  width: 100%;
 }
 
 #filterResultsContainer {
-    padding-bottom: 10px;
+  padding-bottom: 10px;
 }
 
   /* ]]> */
