--- a/abbrevs/src/main/webapp/filter.html
+++ b/abbrevs/src/main/webapp/filter.html
@@ -10,6 +10,7 @@
             <textarea class="text"></textarea>
             <div class="results"></div>
         </div>
+        <div class="lift:embed?what=_abbrmeaning"/>
     </div>
   </body>
 </html>
