Text tool usability improoved

--- a/abbrevs/src/main/webapp/filter.html
+++ b/abbrevs/src/main/webapp/filter.html
@@ -6,7 +6,10 @@
   <body class="lift:content_id=main">
     <div id="main" class="lift:surround?with=default;at=content">
         <div class="lift:FilterTool column span-24 last filter">
-            <div>Вставьте текст из буфера обмена сюда:</div>
+            <div class="left">Вставьте текст из буфера обмена в поле ниже
+              (<a href="http://newasp.omskreg.ru/tdis/g5/G5.htm" target="_blank">получить текст для вставки можно, например, тут</a>)
+            </div>
+            <div class="right"><a href="javascript:void(0)">обновить</a></div>
             <textarea class="text"></textarea>
             <div class="results"></div>
         </div>
